@@ -4,12 +4,11 @@
 	title = モジュールタイトル
 	title:filter0 = tag
 
-	title_none = flag
-
 	id         = twitter id
 	id:filter0 = tag
-	widget_id  = twitter widget id
-	widget_id:filter0 = tag
+
+	title_none  = flag
+	view_system = flag
 <$end>
 
 <$ifbreak(form_error())>
