@@ -15,6 +15,7 @@
 --JavaScriptを使わず中央等の位置調整するように変更。
 --いくつかのテーマで表示が崩れていた問題を修正。
 -インポートログをボタンの近くに表示するようにしました。
+-【Plugin/des_twitter】管理画面で非表示にしました。
 -【Fix】HTTP.pmのtypoを修正（[https://adiary.adiary.jp/0410#c1:Thanks to t-hide]）
 -【Fix】デザイン編集でタイミングにより二重に初期化してしまうことがある。
 -【Fix】月別記事リストのドロップボックス表示時のリンクが正しくない。（Ver3.20以降）
